Added Tabs UI Plugin

--- a/subpage/subpage.html
+++ b/subpage/subpage.html
@@ -37,7 +37,7 @@
 
 </head>
 
-<body data-base-path="/BackBonejUI/">
+<body data-base-path="/BackBoneJQUI/">
 	<div id="wrapper">
 		<div id="container">
 			<header id="header">
