--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 
 </head>
 
-<body data-base-path="/BackBonejUI/">
+<body data-base-path="/BackBoneJQUI/">
 	<div id="wrapper">
 		<div id="container">
 			<header id="header">
@@ -77,7 +77,29 @@
 
 				</div>
 
-			</section><!-- end testing-accordion -->
+			</section><!-- end accordion -->
+
+			<section id="tabs">
+				
+				<ul>
+					<li><a href="#tab-1">Tab 1</a></li>
+					<li><a href="#tab-2">Tab 2</a></li>
+					<li><a href="#tab-3">Tab 3</a></li>
+				</ul>
+
+				<div id="tab-1">
+					<p>Tab 1blops kdjg leksjgelkrjg elkgje gelkgjerlgkjergkl j</p>
+				</div>
+
+				<div id="tab-2">
+					<p>Tab 2 lalalalal ala alala la a</p>
+				</div>
+
+				<div id="tab-3">
+					<p>Tab 3lkdfjg dslfkgj lkjdsg selkgj sdlfkgj</p>
+				</div>
+
+			</section><!-- end tabs -->
 
 
 			<footer id="footer">
