Added progress bar and slider components to framework. Also called those scripts in index.html

--- a/index.html
+++ b/index.html
@@ -101,6 +101,14 @@
 
 			</section><!-- end tabs -->
 
+			<section class="slider">
+				
+			</section><!-- end slider -->
+
+			<section class="progress-bar">
+				
+			</section>
+
 
 			<footer id="footer">
 			
@@ -145,6 +153,9 @@
 	<!-- Javascript Components -->
 
 	<script src="js/app/components/app.components.accordion.js"></script> 	
+	<script src="js/app/components/app.components.tabs.js"></script>
+	<script src="js/app/components/app.components.slider.js"></script>
+	<script src="js/app/components/app.components.progressBar.js"></script>
 
 
 	<!--[if lt IE 7 ]>
